src/main/metadata/objects/Community_Files__c.object
<CustomObject>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It gets checked after expiration date - update through Workflow</description>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Files__c</fullName>
        <description>It stores the names of the files related to the record</description>
        <label>Related Files</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SelectedGroups__c</fullName>
        <label>Shared with Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SelectedUsers__c</fullName>
        <label>Shared with Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Community Files</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Files</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ExpirationDate_greater_than_today</fullName>
        <active>true</active>
        <description>ExpirationDate &gt; today</description>
        <errorConditionFormula>Expiration_Date__c  &lt;=  TODAY()</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>Expiration Date should be greater than Today Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiration_Date_Max_of_1_Year</fullName>
        <active>false</active>
        <description>Latest expiration date to be 1 year max from creation date</description>
        <errorConditionFormula>DATETIMEVALUE(Expiration_Date__c) &lt;=   DATETIMEVALUE(CreatedDate) + 365</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>Expiration date can not be more than 1 year from created date</errorMessage>
    </validationRules>
</CustomObject>